---
source: src/core/generator/generator.rs
expression: cfg_module.config().to_sdl()
---
schema @server @upstream(baseURL: "https://example.com") {
  query: Query
}

type Query {
  f1: T1 @http(path: "/")
}

type T1 {
  campaignTemplates: JSON
  colors: [JSON]
}
